23-hexa-posts/k8s/broker.yml
apiVersion: v1
kind: Service
metadata:
  name: hexa-broker
spec:
  ports:
    - port: 1883
  selector:
    app: broker
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexa-broker
spec:
  selector:
    matchLabels:
      app: broker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: broker
    spec:
      volumes:
        - name: hexa-broker-config-volume
          configMap:
            name: hexa-broker-config
            items:
              - key: config
                path: mosquitto.conf
      containers:
        - image: eclipse-mosquitto
          name: mosquitto
          ports:
            - containerPort: 1883
              name: broker-port
          volumeMounts:
            - mountPath: /mosquitto/config/
              name: hexa-broker-config-volume
              readOnly: true
