23-hexa-posts/k8s/database.yml
apiVersion: v1
kind: Service
metadata:
  name: hexa-database
spec:
  ports:
    - port: 3306
  selector:
    app: database
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexa-database
spec:
  selector:
    matchLabels:
      app: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - image: mysql:5.7
          name: mysql
          ports:
            - containerPort: 3306
              name: database
          volumeMounts:
            - name: hexa-database-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: hexa-database-storage
          persistentVolumeClaim:
            claimName: hexa-database-pv-claim
