23-hexa-posts/k8s/posts.yml
apiVersion: v1
kind: Service
metadata:
  name: hexa-posts
  labels:
    app: posts
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: posts
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexa-posts
  labels:
    app: posts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: hexa-posts
          image: marloto/hexa-posts:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
